src/test/deca/syntax/invalid/CastInvalid2.deca



{
	float b;

	int a = (int) b;
	
}
